Fix to primary nav alignment.
Issue #2: https://github.com/elsplatto/eT4L/issues/2

--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@ body.login label {
 	margin-top:20px;
 }
 
-input {
+input[type='text'], input[type='password'], input[type='email'] {
 	width:295px;
 	height:26px;
 	border:2px solid #b6b0b0;
@@ -698,6 +698,11 @@ header a {
 	padding: 0 7px;
 }
 
+.licenseOverlayHolder .sbOptions li:hover, .licenseOverlayHolder .sbOptions li:hover a {
+	background-color:#333;
+	color:#fff;
+}
+
 .licenseOverlayHolder .sbOptions li {
 	background-color:#fff;
 }
@@ -1036,7 +1041,7 @@ nav .navContainer {
 #primaryNav .navContainer {
 	height: inherit;
 	border-style:solid;
-	border-width:1px 0;
+	border-width:0;
 	border-color:#4996a8;
 }
 
@@ -1092,7 +1097,7 @@ nav .navContainer {
 	font-size:16px;
 	color:#fff;
 	text-shadow: 1px 1px 0px #333;
-	padding:9px 15px;
+	padding:10px 15px;
 	z-index:300;
 }
 
